reports/cap2.err.log
Traceback (most recent call last):
  File "C:\Users\Michael\AppData\Local\Programs\Python\Python310\lib\site-packages\jupyter_cache\executors\utils.py", line 58, in single_nb_execution
    executenb(
  File "C:\Users\Michael\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 1265, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\Michael\AppData\Local\Programs\Python\Python310\lib\site-packages\jupyter_core\utils\__init__.py", line 166, in wrapped
    return loop.run_until_complete(inner)
  File "C:\Users\Michael\AppData\Local\Programs\Python\Python310\lib\asyncio\base_events.py", line 649, in run_until_complete
    return future.result()
  File "C:\Users\Michael\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 703, in async_execute
    await self.async_execute_cell(
  File "C:\Users\Michael\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 1021, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\Michael\AppData\Local\Programs\Python\Python310\lib\site-packages\nbclient\client.py", line 915, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
print(f'Hay {sum(resumen['numhogares'])} hogares en total.')
resumen['porcentaje'] = resumen['numhogares']/sum(resumen['numhogares'])
------------------

[1;36m  Cell [1;32mIn[5], line 1[1;36m[0m
[1;33m    print(f'Hay {sum(resumen['numhogares'])} hogares en total.')[0m
[1;37m                              ^[0m
[1;31mSyntaxError[0m[1;31m:[0m f-string: unmatched '['

SyntaxError: f-string: unmatched '[' (851716747.py, line 1)

